--- a/turlututu/index.html
+++ b/turlututu/index.html
@@ -1,30 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>Turlututu</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <img src="img/restdblogo.png" alt="logo" />
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Docs</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Templates</a></li>
+        <li><a href="#">Pricing</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Sign Up</a></li>
+        <li><a href="#"><i class="material-icons" style="font-size:20px;color:withe;">group</i>Login</a></li>
+      </ul>
+    </nav>
     <header>
-        <nav>
-            <ul>
-                <li>Features</li>
-                <li>Docs</li>
-                <li>Blog</li>
-                <li>Templates</li>
-                <li>Pricing</li>
-                <li>Contact</li>
-                <li>Sign up</li>
-    
-            </ul>
+        <div class="first-headerd">
+            <img src="img/JSGeek.png" alt="JSGeek logo">
+        </div>
+        <div class="sec-headerd">
+            <img src="img/restdblogo.png" alt="restdblogo">
+            <h1>The Plug and PLay Database Service</h1>
+            <button type="button">Start Building Now >></button>
+        </div>
+        <div>
 
-        </nav>
-
+        </div>
     </header>
+    <section class="first-section">
+      <h2>For awesome projects with deadlines</h2>
+    </section>
+    <section class="sec-section">
+      <article class="gr">
+        <h2>> Simple to use</h2>
+        <p>
+          Turlututu.io is probably the easiest online NoSQL database backend for
+          web and serverless applications. Model your information quickly. The
+          data management application, schema and REST API are instantly
+          available.
+        </p>
+      </article>
+      <article class="gr">
+        <h2>> Built for the modern web</h2>
+        <p>
+          Designed for the modern web with high performance REST API and NoSQL
+          MongoDB query language, server-side codehooks, user authentification
+          (Auth0), Media Archive, Realtime messages and secure Ajax/CORS.
+        </p>
+      </article>
+      <article class="gr">
+        <h2>> Productive</h2>
+        <p>
+          Collaborate and work with data in a worksapce on your desktop, laptop
+          or smartphone. Quickly search through all your data. Secure access
+          with roles.
+        </p>
+      </article>
+      <article class="gr">
+        <h2>> More than a database</h2>
+        <p>
+          turlututu.com databses can also serve web pages. Use HTML, Javascript,
+          jQuery, Angular, ReactJS (or your favorite framework) on turlututu.com
+          Pages with server-side data-binding
+        </p>
+      </article>
+    </section>
+    <section class="third-section">
+      <h2>Innovative teams gets more done with turlututu.com</h2>
+    </section>
+    <section class="forth-section">
+        <div class="flex">
+            <img src="img/miles.png" alt="PMiles" />
+            <img src="img/apptruck.png" alt="apptruck" />
+            <img src="img/spectrum.png" alt="spectrum" />
+            <img src="img/knowit.png" alt="knowit" />
+            <img src="img/hatchery.png" alt="hatchery" />
+            <img src="img/fwd.png" alt="fwd" /></li>
+        </div>
+        <img  class="pas-flex" src="img/product-hunt-logo-horizontal-orange.png" alt="product-hunt" />
+    </section>
+    <section class="fifth-section">
+        <button class="b1" type="button">REST API >></button>
+        <button class="b2" type="button">Docs >></button>
+        <button  class="o1"type="button">Start Building >></button>
+    </section>
+    <button  class="botom-btn"type="button"><img src="img/btn-logo.png" alt=""></button>
     <footer>
-
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">	&#9400; 2017 turlututu</a></li>
+          </ul>
     </footer>
-    
-</body>
+  </body>
 </html>
