--- a/turlututu/index.html
+++ b/turlututu/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Turlututu</title>
+    <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link
       rel="stylesheet"
@@ -13,7 +14,7 @@
   <body>
     <nav>
       <ul>
-        <img src="img/restdblogo.png" alt="logo" />
+        <li><img src="img/restdblogo.png" alt="logo" /></li>
         <li><a href="#">Features</a></li>
         <li><a href="#">Docs</a></li>
         <li><a href="#">Blog</a></li>
@@ -21,7 +22,7 @@
         <li><a href="#">Pricing</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">Sign Up</a></li>
-        <li><a href="#"><i class="material-icons" style="font-size:20px;color:withe;">group</i>Login</a></li>
+        <li><a href="#"><i class="material-icons" style="font-size:20px;color:#FFF;">person</i>Login</a></li>
       </ul>
     </nav>
     <header>
@@ -40,7 +41,7 @@
     <section class="first-section">
       <h2>For awesome projects with deadlines</h2>
     </section>
-    <section class="sec-section">
+    <div class="sec-section">
       <article class="gr">
         <h2>> Simple to use</h2>
         <p>
@@ -74,27 +75,27 @@
           Pages with server-side data-binding
         </p>
       </article>
-    </section>
+    </div>
     <section class="third-section">
       <h2>Innovative teams gets more done with turlututu.com</h2>
     </section>
-    <section class="forth-section">
+    <div class="forth-section">
         <div class="flex">
             <img src="img/miles.png" alt="PMiles" />
             <img src="img/apptruck.png" alt="apptruck" />
             <img src="img/spectrum.png" alt="spectrum" />
             <img src="img/knowit.png" alt="knowit" />
             <img src="img/hatchery.png" alt="hatchery" />
-            <img src="img/fwd.png" alt="fwd" /></li>
+            <img src="img/fwd.png" alt="fwd" />
         </div>
         <img  class="pas-flex" src="img/product-hunt-logo-horizontal-orange.png" alt="product-hunt" />
-    </section>
-    <section class="fifth-section">
+    </div>
+    <div class="fifth-section">
         <button class="b1" type="button">REST API >></button>
         <button class="b2" type="button">Docs >></button>
-        <button  class="o1"type="button">Start Building >></button>
-    </section>
-    <button  class="botom-btn"type="button"><img src="img/btn-logo.png" alt=""></button>
+        <button  class="o1" type="button">Start Building >></button>
+    </div>
+    <button  class="botom-btn" type="button"><img src="img/btn-logo.png" alt="botom-btn"></button>
     <footer>
         <ul>
             <li><a href="#">Home</a></li>
