dernier commit mercredi

--- a/activecollab/index.html
+++ b/activecollab/index.html
@@ -46,9 +46,35 @@
           </article>
         </div>
         <div class="sec-div">
+          <p>Active Collab helps your team stay organized when you outgrow email. But it's so much more than that -- with prenty of neat add-ons, it's a one-stop solution for all your business needs</p>
+          <a href="#">Try if free for 30 days!</a>
+          <p>No credit card required, unsubsribe at any time.</p>
           <img src="img/background.png" alt="background">
         </div>
       </header>
-      <section></section>
+      <section class="sec-section">
+        <h2>On our cloud or your server</h2>
+        <p>Active collab runs in the cloud like most browser apps today, but you can also install it on your own server. Try it free for 30 days and then decide what works best for you</p>
+        <div class="grid-div">
+          <article>
+            <img src="img/monthly-plans.png" alt="monthly plans">
+            <h3>Monthly Plans</h3>
+            <p>In the cloud</p>
+            <p>No setup required</p>
+            <p>Ready in 2 minutes</p>
+            <a href="#">Plans & Pricing</a>
+            <p>from $25 / month</p>
+          </article>
+          <article>
+            <img src="img/self-hosted.png" alt="self-hosted">
+            <h3>Self-Hosted</h3>
+            <p>Installs on your own server</p>
+            <p>Unlimited team members</p>
+            <p>One year of support included</p>
+            <a href="#">Self-Hosted Pricing</a>
+            <p>from $25 / month</p>
+          </article>
+        </div>
+      </section>
   </body>
 </html>
