--- a/activecollab/index.html
+++ b/activecollab/index.html
@@ -3,9 +3,6 @@
   <head>
     <title>Codelab</title>
     <meta charset="UTF-8" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -20,6 +17,7 @@
           <li><a href="#">Ressources</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">Help & Support</a></li>
+        </ul>
       </nav>
       <header>
         <h1>Powerful, yet simple project management tool</h1>
@@ -54,7 +52,7 @@
       </header>
       <section class="sec-section">
         <h2>On our cloud or your server</h2>
-        <p>Active collab runs in the cloud like most browser apps today, but you can also install it on your own server. Try it free for 30 days and then decide what works best for you</p>
+        <p>Active collab runs in the cloud like most browser apps today, but you can also install it on your own server. Try it free for 30 days and then decide what works best for you.</p>
         <div class="grid-div">
           <article>
             <img src="img/monthly-plans.png" alt="monthly plans">
@@ -63,7 +61,7 @@
             <p>No setup required</p>
             <p>Ready in 2 minutes</p>
             <a href="#">Plans & Pricing</a>
-            <p>from $25 / month</p>
+            <p><i>from $25 / month</i></p>
           </article>
           <article>
             <img src="img/self-hosted.png" alt="self-hosted">
@@ -72,9 +70,114 @@
             <p>Unlimited team members</p>
             <p>One year of support included</p>
             <a href="#">Self-Hosted Pricing</a>
-            <p>from $25 / month</p>
+            <p><i>One time fee - from $999</i></p>
           </article>
         </div>
       </section>
+      <section class="users-sec">
+        <h2>Who's using Active Collab?</h2>
+        <p>For more than 10 years we've been trusted by over 200,000 people in companies ranging from small businesses to Fortune 500 members, universities and government institutions.</p>
+        <img src="img/companies.png" alt="companies logo">
+      </section>
+      <section class="form-sec">
+        <h2>Get started width Active Collab</h2>
+        <p>Enter your details to get a month of Active Collab absolutely free; without any limitations.</p>
+        <form action="#" method="post">
+          <div class="grid-form">
+            <div id="nm">
+              <label for="name">Your Name or Organization</label>
+              <input name="name" id="name" type="text" placeholder="Enter name or organization" />
+            </div>
+            <div id="em">
+              <label for="email">Email</label>
+              <input name="email" id="email" type="email" placeholder="name@organization.com" />
+            </div>
+          </div>
+          <div id="ms">
+            <label for="password">Password</label>
+            <input name="password" id="password" type="password" placeholder="The longer, the stronger" />
+          </div>
+          <input class="submit-btn" type="submit" value="Start my free month!" />
+          <p>Hope you'll enjoy it!</p>
+        </form>
+        <ul class="under-form">
+          <li>Your data is safe with us.</li>
+          <li><a href="#">Active Collab security</a></li>
+        </ul>
+      </section>
+      <footer>
+        <div class="footer-grid">
+          <div>
+            <ul>
+              <li>Product</li>
+              <li>Features</li>
+              <li>All Features</li>
+              <li>Pricing</li>
+              <li>Add-Ons</li>
+              <li>Roadmap</li>
+              <li>Timer</li>
+              <li>Mobile Apps</li>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <li>Alternative</li>
+              <li>Best Project Management Alternative</li>
+              <li>Basecamp Alternative</li>
+              <li>Trello Alternative</li>
+              <li>Asana Alternative</li>
+              <li>Teamwork Alternative</li>
+              <li>Wrike Alternative</li>
+              <li>JIRA Alternative</li>
+              <li>MS Project Alternative</li>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <li>Solution</li>
+              <li>Self-Hosted Project Management</li>
+              <li>Task Management</li>
+              <li>Project Management</li>
+              <li>Team collaboration</li>
+              <li>Team Management</li>
+              <li>Client Management</li>
+              <li>Time Tracking</li>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <li>For Teams</li>
+              <li>Marketing</li>
+              <li>Designers</li>
+              <li>Web Design</li>
+              <li>Web Development</li>
+              <li>Startups</li>
+              <li>SEO Agencies</li>
+              <li>Small Business</li>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <li>Company</li>
+              <li>Careers</li>
+              <li>Privacy Policy</li>
+              <li>Terms of Services</li>
+              <li>Security</li>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <li>Ressources</li>
+              <li>Project Management Guide</li>
+              <li>Blog</li>
+              <li>Newsletters</li>
+              <li>Help & Support</li>
+            </ul>
+          </div>
+        </div> 
+        <img src="img/footer-img.png" alt="socials">
+        <p>Happy Collaborating</p>
+        <p>&#169; 2007-2017 Activ Collab</p>
+      </footer>
   </body>
 </html>
